fixed spacing on text input page

--- a/textinput.css
+++ b/textinput.css
@@ -368,15 +368,15 @@ color: #0B5345 ;
   width: 50%;
   font-size: 18px;
   color: black;
-  padding-left: 2em;
-  padding-right: 1.4em;
-  line-height: 2em;
+ padding: 1.5em;
+  line-height: 1.5em;
   background: white;
   border-radius: 20px;
   box-shadow: 0px 8px 5px lightgrey;
   font-family: 'Rubik';
   margin-left: 7em;
   margin-left: 8.5em;
+  visibility: hidden;
 }
 
 
@@ -470,7 +470,7 @@ color: #0B5345 ;
 #circle{
   position: absolute;
   z-index: 2000;
-  margin-top: 22.5%;
+  margin-top: 26.5%;
   margin-left: 66.5%;
   background-color: yellow;
   width: 35px;
@@ -485,7 +485,7 @@ color: #0B5345 ;
 }
 
 #key {
-  margin-top: 16%;
+  margin-top: 20%;
   visibility: hidden;
   margin-left: 15.5%;
   margin-bottom: 1%;
@@ -495,11 +495,11 @@ color: #0B5345 ;
 #hide{
   position: absolute;
   z-index: 1999;
-  margin-top: 22.5%;
-  margin-left: 45.5%;
+  margin-top: 26.8%;
+  margin-left: 46%;
   margin-bottom: 10%;
   background-color: white;
-  width: 20%;
+  width: 18%;
   visibility: hidden;
   -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
